--- a/styles.css
+++ b/styles.css
@@ -317,9 +317,8 @@ header ul {
   padding-bottom: 0;
 }
 .mail-address h3 {
-  font-size: 1.2rem;
+  font-size: 24px;
   text-align: center;
-  line-height: 1.5rem;
   color: #fff;
 }
 
